About me and image page added

--- a/src/about_me.html
+++ b/src/about_me.html
@@ -5,12 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>Main Page</title>
+  <title>About Me</title>
 </head>
 
 <body>
   <main>
-    <h1>Created for My SWE4633 Class!</h1>
+    <h1>insert about me info</h1>
+    <a href='/src/about_me.html'> About Me </a>
+    <a href="/src/image.html">Cloud Hosted Image</a>
   </main>
 </body>
 
