--- a/src/image.html
+++ b/src/image.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>Main Page</title>
+  <title>Image </title>
 </head>
 
 <body>
   <main>
-    <h1>Created for My SWE4633 Class!</h1>
+    <h1>Show image here</h1>
   </main>
 </body>
 
