fixed url links

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
 <body>
   <main>
     <h1>Created for My SWE4633 Class!</h1>
-    <p><a href='/src/about_me.html'> About Me </a> </p>
-   <p><a href="/src/image.html">Cloud Hosted Image</a></p>
+    <p><a href='./about_me.html'> About Me </a> </p>
+   <p><a href="./image.html">Cloud Hosted Image</a></p>
   </main>
 </body>
 
