--- a/src/about_me.html
+++ b/src/about_me.html
@@ -10,7 +10,14 @@
 
 <body>
   <main>
-    <h1>insert about me info</h1>
+    <h1>Khalib Morton</h1>
+    <p>My name is Khalib Morton and I am a senior here at KSU</p>
+    <p>My hobbies include video games, baseball, and basketball.
+        I major in Computer Science and have an expected graduation date at the end of this semester.
+        Looking forward to the knowledge I gain from this course.
+    </p>
+
+    <p><a href="./index.html">Home</a></p>
   </main>
 </body>
 
