--- a/src/image.html
+++ b/src/image.html
@@ -10,7 +10,8 @@
 
 <body>
   <main>
-    <h1>Show image here</h1>
+    <h1>Crazy Duck</h1>
+    <img src="./random.jpg" alt="Crazy Duck">
     <p><a href="./index.html"></a></p>
   </main>
 </body>
