--- a/src/image.html
+++ b/src/image.html
@@ -12,7 +12,7 @@
   <main>
     <h1>Crazy Duck</h1>
     <img src="./random.jpg" alt="Crazy Duck">
-    <p><a href="./index.html"></a></p>
+    <p><a href="./index.html">Home</a></p>
   </main>
 </body>
 
